tests/snapshots/tui_snapshots__initial_recipe_browser_120x40.snap
---
source: tests/tui_snapshots.rs
expression: frame.snapshot_text(scenario.sandbox.root())
---
viewport: 120x40
cursor: 1,3 visible=true
alternate-screen: true
---
╭─────────────────── jtv-recipes ────────────────────╮╭─────────────────────── boolean enabled ────────────────────────╮
│>                                            1 / 18 ││ boolean enabled                                                ▲
╰────────────────────────────────────────────────────╯│                                                                █
╭───────────────────── Results ──────────────────────╮│ Accept the configured boolean picker value.                    █
│> boolean enabled                                   ││                                                                █
│  capture value                                     ││ ["@printf 'boolean:%s\\n' \"$1\" >> \"$JTV_E2E_LOG\""]         █
│  choose environment                                ││                                                                █
│  expression-default [value=<just default>]         ││                                                                █
│  flag-options [force=disabled] [target=default]    ││                                                                █
│  literal-default [value=fallback]                  ││                                                                █
│  newline-choice value                              ││                                                                █
│  ops::module-run [value=module-default]            ││                                                                █
│  pick-directory path                               ││                                                                █
│  pick-file path                                    ││                                                                █
│  plus-variadic items                               ││                                                                █
│  queue-a                                           ││                                                                █
│  queue-b-fail                                      ││                                                                █
│  queue-c-after                                     ││                                                                █
│  secret token                                      ││                                                                █
│  simple                                            ││                                                                █
│  simple-alias                                      ││                                                                █
│  variadic items                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                █
│                                                    ││                                                                ║
│                                                    ││                                                                ║
│                                                    ││                                                                ║
│                                                    ││                                                                ▼
╰────────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
  CHANNEL  jtv-recipes                       Actions: ctrl-x • Help: ctrl-h                                     v0.15.9
