tests/snapshots/tui_snapshots__nested_choice_picker_120x40.snap
---
source: tests/tui_snapshots.rs
expression: frame.snapshot_text(scenario.sandbox.root())
---
viewport: 120x40
cursor: 1,3 visible=true
alternate-screen: true
---
╭──────────────────────────────────────────────────── environment ─────────────────────────────────────────────────────╮
│>                                                                                                                1 / 3│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭────────────────────────────────────────────────────── Results ───────────────────────────────────────────────────────╮
│> development                                                                                                         │
│  staging                                                                                                             │
│  production                                                                                                          │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  CHANNEL  Custom Channe                              Help: ctrl-h                                              v0.15.9
