tests/snapshots/tui_snapshots__nested_path_picker_120x40.snap
---
source: tests/tui_snapshots.rs
expression: frame.snapshot_text(scenario.sandbox.root())
---
viewport: 120x40
cursor: 1,3 visible=true
alternate-screen: true
---
╭──────────────────────────────────────────────────────── path ────────────────────────────────────────────────────────╮
│>                                                                                                                1 / 5│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭────────────────────────────────────────────────────── Results ───────────────────────────────────────────────────────╮
│> sample-directory/marker.txt                                                                                         │
│  ops.just                                                                                                            │
│  sample.txt                                                                                                          │
│  .jtv.toml                                                                                                           │
│  justfile                                                                                                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  CHANNEL  Custom Channe                              Help: ctrl-h                                              v0.15.9
